--- a/outline.html
+++ b/outline.html
@@ -31,3 +31,11 @@ if minus:
 save()
 print()
     
+total length:
+    total_items*(min_height + each_position(position_height))
+    
+    total_items*(113 + each_position(46))
+
+total = 0
+for location in locations:
+    total += 
